# Smart_Lock

SmartLockApp/: .gitignore  Cargo.toml
SmartLockApp/proto/: Cargo.toml
SmartLockApp/proto/src/: lib.rs
SmartLockApp/smart_lock_client/: Cargo.toml
SmartLockApp/smart_lock_client/src/: main.rs
SmartLockApp/smart_lock_server/: Cargo.toml
SmartLockApp/smart_lock_server/src/: main.rs
SmartLockApp/telegram_bot/: Cargo.toml
SmartLockApp/telegram_bot/src/: main.rs
SmartLockApp/telegram_token/: Cargo.toml
device/: Cargo.toml  memory.x
device/src/: main.rs
