[package]
name = "device"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 0 #'z' # turn on maximum optimizations. We only have 64kB
lto = true      # Link-time-optimizations for further size reduction
strip = "debuginfo"

[dependencies]
embedded-hal = { features = ["unproven"], version = "0.2.7" }
nb = "1"
cortex-m = "0.7.6"
cortex-m-rt = "0.7.1"
# Panic behaviour, see https://crates.io/keywords/panic-impl for alternatives
panic-halt = "0.2.0"
usb-device = "0.2.8"
usbd-serial = "0.1"
mfrc522 = "0.3.0"
cortex-m-semihosting = "0.5.0"
panic-semihosting = "0.6.0"
panic-itm = "0.4.2"
unwrap-infallible = "0.1.5"

[dependencies.stm32f1xx-hal]
version = "0.10.0"
features = ["rt", "stm32f103", "medium", "stm32-usbd"]


[dependencies.stm32-usbd]
version = "0.6.0"
optional = true