[package]
name = "smart_lock_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proto = { path = "../proto"}
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.8", features = ["codec"] }
reqwest = { version = "*", features = ["json"]}